[package]
name = "mdbook-linkcheck"
version = "0.7.2"
authors = ["Michael Bryan <michaelfbryan@gmail.com>"]
description = "A backend for `mdbook` which will check your links for you."
license = "MIT"
edition = "2018"
documentation = "https://docs.rs/mdbook-linkcheck"
repository = "https://github.com/Michael-F-Bryan/mdbook-linkcheck"
readme = "README.md"

[[bin]]
name = "mdbook-linkcheck"
path = "src/bin/mdbook-linkcheck.rs"
doc = false

[dependencies]
anyhow = "1.0.28"
codespan = "0.9"
codespan-reporting = "0.9"
dunce = "1.0.0"
env_logger = "0.7"
http = "0.2"
linkcheck = "0.3.1"
log = "0.4"
mdbook = { version = "0.4", default-features = false }
pulldown-cmark = "0.8.0"
regex = "1.0"
reqwest = { version = "0.10", default-features = false, features = ["native-tls-vendored"]}
semver = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
structopt = "0.3"
tokio = "0.2.20"

[dev-dependencies]
pretty_assertions = "0.6.1"
toml = "0.5"
