[package]
name = "mdbook-linkcheck"
version = "0.7.7"
authors = ["Michael Bryan <michaelfbryan@gmail.com>"]
description = "A backend for `mdbook` which will check your links for you."
license = "MIT"
edition = "2021"
documentation = "https://docs.rs/mdbook-linkcheck"
repository = "https://github.com/Michael-F-Bryan/mdbook-linkcheck"
readme = "README.md"
rust-version = "1.70"

[[bin]]
name = "mdbook-linkcheck"
path = "src/bin/mdbook-linkcheck.rs"
doc = false

[dependencies]
anyhow = "1"
codespan = { version = "0.11.1" }
codespan-reporting = "0.11"
dunce = "1"
env_logger = "0.11"
http = "0.2"
linkcheck = "0.4"
log = "0.4"
mdbook = { version = "0.4", default-features = false }
pulldown-cmark = "0.8.0"
regex = "1"
reqwest = { version = "0.11", default-features = false, features = ["native-tls-vendored"]}
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
serde_json = "1"
structopt = "0.3"
tokio = { version = "1", features = ["rt-multi-thread"] }

[dev-dependencies]
pretty_assertions = "1"
toml = "0.5"

[workspace]
members = ["xtask"]

[badges]
maintenance = { status = "passively-maintained"}
